<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.changhong.valkyrie</groupId>
    <artifactId>valkyrie</artifactId>
    <version>v1.0.0-arch.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>utils</module>
        <module>app</module>
        <module>launcher</module>
        <module>drivers</module>
        <module>core</module>
        <module>richtextfx</module>
        <module>monacofx</module>
    </modules>

    <properties>
        <richtextfx.version>v1.0.0-arch.1</richtextfx.version>
        <groovy.version>5.0.5</groovy.version>
        <revision>v1.0.0-arch.1</revision>
        <openjfx.version>21.0.5</openjfx.version>
        <atlantafx.version>2.0.1</atlantafx.version>
        <jackson.version>2.21.1</jackson.version>
        <mysql.version>8.3.0</mysql.version>
        <hikari.version>5.1.0</hikari.version>
        <jsqlparser.version>5.3</jsqlparser.version>
        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.32</logback.version>
        <sqlformat.version>2.0.5</sqlformat.version>
        <lombok.version>1.18.36</lombok.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${openjfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${openjfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${openjfx.version}</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>monacofx</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>utils</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>app</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>launcher</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>drivers</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>com.changhong.valkyrie</groupId>
                <artifactId>core</artifactId>
                <version>v1.0.0-arch.1</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.32</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>